--- a/28.12.23_Units&Position/Units-Level-3_3/css/style.css
+++ b/28.12.23_Units&Position/Units-Level-3_3/css/style.css
@@ -7,6 +7,7 @@ html {
 }
 header {
   background-color: #333333;
+  height: 100vh;
 }
 h1 {
   font-size: 1.7em;
@@ -16,12 +17,38 @@ h1 {
   text-align: center;
 }
 div {
-  background-image: linear-gradient(to top right, purple, blue, lightblue);
+  background-image: linear-gradient(
+    to top right,
+    purple 20%,
+    blue 60%,
+    lightblue 80%
+  );
   text-align: center;
-  display: inline-block;
   padding: 3px;
   margin-top: 126px;
+  margin-left: auto;
+  margin-right: auto;
   border-radius: 5px;
   height: 227px;
   width: 300px;
+  color: white;
+}
+h2 {
+  font-size: 4.8em;
+  padding-top: 5px;
+}
+header p {
+  font-size: 1.6em;
+  margin-top: 50px;
+  padding: 10px;
+}
+ul {
+  text-align: right;
+  margin-right: 20px;
+  font-size: 1.6em;
+  color: gray;
+  align-items: center;
+}
+ul li {
+  padding-bottom: 10px;
 }
