--- a/Template/index.html
+++ b/Template/index.html
@@ -6,5 +6,17 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <section class="basic">
+      <div>
+        <h3>Lorem, ipsum.</h3>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex ab
+          voluptas ea? Perferendis suscipit, quam quia labore exercitationem
+          culpa dicta?
+        </p>
+      </div>
+      <img src="./assets/img/324865.jpg" alt="" />
+    </section>
+  </body>
 </html>
