--- a/02.01.23_Flex_Box/Flexbox-Level-3_2/css/style.css
+++ b/02.01.23_Flex_Box/Flexbox-Level-3_2/css/style.css
@@ -6,4 +6,39 @@
 * {
   margin: 0;
   padding: 0;
+  text-decoration: none;
+  font-family: lato;
+  color: rgba(0, 0, 0, 0.8);
+  /* border: solid black; */
+}
+
+/* !Header */
+header {
+  display: flex;
+  align-items: center;
+  height: 60px;
+}
+
+header h2 {
+  font-size: 24px;
+  padding: 0 32px 0 62px;
+}
+
+header nav a {
+  font-size: 16px;
+  font-weight: 600;
+  padding-right: 14px;
+}
+span {
+  margin-left: 70vw;
+}
+
+/* !Main */
+
+main {
+  background-color: #d9e8e5;
+  height: 94vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
