--- a/17.01.24_Headphones/css/shop.css
+++ b/17.01.24_Headphones/css/shop.css
@@ -19,7 +19,7 @@ body {
   background-color: #2e2e2e;
 }
 .wraper {
-  background: url(../assets/img/section-voyager.jpg) no-repeat;
+  background: url(../assets/img/section-composition4.jpg) no-repeat;
   background-size: 56.003vw 100vh;
   height: 100vh;
 }
@@ -71,13 +71,13 @@ body {
   margin-right: 1.5vw;
   color: #737373;
 }
-.aside a:nth-of-type(2)::before {
+.aside a:nth-of-type(5)::before {
   border: #ffffff 2px solid;
   border-radius: 100%;
   width: 20px;
   text-align: center;
 }
-.aside a:nth-of-type(2) {
+.aside a:nth-of-type(5) {
   color: #ffffff;
 }
 .aside a:hover {
@@ -98,24 +98,27 @@ main section {
   position: absolute;
   max-width: 43.997vw;
   top: 10vh;
-  right: 20vw;
+  right: 10vw;
+  text-align: center;
 }
-main h3 {
-  font-size: 4.8rem;
+
+main section h2 {
+  font-size: 2.4rem;
   color: #ebccc2;
-  max-width: 20vw;
-  margin-bottom: 9vh;
 }
 main section p {
-  font-size: 1.6rem;
   color: #737373;
-  line-height: 24px;
+  font-size: 1.6rem;
 }
 main section p:nth-of-type(1) {
-  max-width: 22.167vw;
   margin-bottom: 2vh;
+  margin-top: 1.8vh;
 }
 main section p:nth-of-type(2) {
-  max-width: 20.915vw;
-  margin-bottom: 2vh;
+  margin-bottom: 1vh;
+}
+main section button {
+  padding: 12px 32px;
+  background-color: #ebccc2;
+  font-size: 1.6rem;
 }
