--- a/22.01.24_SCSS/scss/variables.scss
+++ b/22.01.24_SCSS/scss/variables.scss
@@ -1,3 +1,5 @@
-$text-color: aqua;
-$bck-color: blue;
+$text-color:aqua; 
+$bck-color: blue; 
 $spacing: 1rem;
+$bck-nav: cornflowerblue;
+$hover-color: orange;
