--- a/05.02.24-Return_Arrow_Funktion/Übungen/String-Methods/Level-2_3/assets/css/style.css
+++ b/05.02.24-Return_Arrow_Funktion/Übungen/String-Methods/Level-2_3/assets/css/style.css
@@ -1,4 +1,9 @@
-* {
-  margin: 0;
-  padding: 0;
+.highlight {
+  background-color: yellow;
+}
+
+form {
+  margin: 1rem;
+  display: flex;
+  justify-content: flex-end;
 }
