--- a/2024_Februar/21.02.24-API/Project_Picsum/assets/css/style.css
+++ b/2024_Februar/21.02.24-API/Project_Picsum/assets/css/style.css
@@ -1,4 +1,27 @@
-* {
-  margin: 0;
-  padding: 0;
+h1 {
+  text-align: center;
+}
+.outputPictures {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  row-gap: 2.5vh;
+}
+
+.outputPictures img {
+  max-width: 400px;
+  border-radius: 10px;
+}
+.outputPictures div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.outputPictures button {
+  background-color: hotpink;
+  border-color: hotpink;
+  box-shadow: white;
+  border-radius: 5px;
+  color: white;
+  padding: 1vh 2vw;
 }
