--- a/2024_März/06.03.24_Projekt/src/index.css
+++ b/2024_März/06.03.24_Projekt/src/index.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: Roboto;
+  src: url(../public/font/RobotoSlab/RobotoSlab-Regular.ttf);
+}
+
+html {
+  font-family: Roboto, sans-serif;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -7,6 +16,7 @@
 img {
   max-width: 100%;
 }
+
 body {
-  width: 414px;
+  width: 417px;
 }
